--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mi primer proyecto de Node JS",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Maxwell035/projectCoursera/issues"
   },
-  "homepage": "https://github.com/Maxwell035/projectCoursera#readme"
+  "homepage": "https://github.com/Maxwell035/projectCoursera#readme",
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
